unpackaged/main/default/objects/Flight__c/fields/Account_Id_Log__c.field-meta.xml
<CustomField>
    <fullName>Account_Id_Log__c</fullName>
    <label>Account Id Log</label>
    <length>255</length>
    <type>Text</type>
</CustomField>