unpackaged/main/default/objects/Flight__c/fields/Arrival_Airport_Code_Second_Leg__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport_Code_Second_Leg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arrival Airport Code - Second Leg</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights (Arrival Airport Code - Second Leg)</relationshipLabel>
    <relationshipName>Flights3</relationshipName>
    <type>Lookup</type>
</CustomField>