unpackaged/main/default/objects/Flight__c/fields/Arrival_Airport_Code_Third_Leg__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport_Code_Third_Leg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arrival Airport Code - Third Leg</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights (Arrival Airport Code - Third Leg)</relationshipLabel>
    <relationshipName>Flights5</relationshipName>
    <type>Lookup</type>
</CustomField>