unpackaged/main/default/objects/Flight__c/fields/Arrival_Time_First_Leg__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time_First_Leg__c</fullName>
    <label>Arrival Time - First Leg</label>
    <type>DateTime</type>
</CustomField>