unpackaged/main/default/objects/Flight__c/fields/Arrival_Time_First_Leg_UTC_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time_First_Leg_UTC_Conversion__c</fullName>
    <description>In order to handle timezone issues for flights, all flight arrival times will be entered in DateTime fields and converted to text fields as UTC.</description>
    <label>Arrival Time - First Leg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>