unpackaged/main/default/objects/Flight__c/fields/Arrival_Time_Second_Leg__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time_Second_Leg__c</fullName>
    <label>Arrival Time - Second Leg</label>
    <type>DateTime</type>
</CustomField>