unpackaged/main/default/objects/Flight__c/fields/Arrival_Time_Third_Leg_UTC_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time_Third_Leg_UTC_Conversion__c</fullName>
    <label>Arrival Time - Third Leg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>