unpackaged/main/default/objects/Flight__c/fields/Departing_Or_Arriving__c.field-meta.xml
<CustomField>
    <fullName>Departing_Or_Arriving__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Unchecked is Departing &amp; Checked is Arriving</description>
    <label>Departing Or Arriving</label>
    <type>Checkbox</type>
</CustomField>