unpackaged/main/default/objects/Flight__c/fields/Departing_or_Arriving_Flight__c.field-meta.xml
<CustomField>
    <fullName>Departing_or_Arriving_Flight__c</fullName>
    <formula>IF( Departing_Or_Arriving__c = true, &quot;Arriving Flight&quot;, &quot;Departing Flight&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departing or Arriving Flight</label>
    <type>Text</type>
</CustomField>