unpackaged/main/default/objects/Flight__c/fields/Departure_Airport_Code_First_Leg__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport_Code_First_Leg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure Airport Code - First Leg</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Flights</relationshipName>
    <type>Lookup</type>
</CustomField>