unpackaged/main/default/objects/Flight__c/fields/Departure_Airport_Code_Second_Leg__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport_Code_Second_Leg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure Airport Code - Second Leg</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights (Departure Airport Code - Second Leg)</relationshipLabel>
    <relationshipName>Flights2</relationshipName>
    <type>Lookup</type>
</CustomField>