unpackaged/main/default/objects/Flight__c/fields/Departure_Airport_Code_Third_Leg__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport_Code_Third_Leg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure Airport Code - Third Leg</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights (Departure Airport Code - Third Leg)</relationshipLabel>
    <relationshipName>Flights4</relationshipName>
    <type>Lookup</type>
</CustomField>