unpackaged/main/default/objects/Flight__c/fields/Early_Late_Flight_Approval__c.field-meta.xml
<CustomField>
    <fullName>Early_Late_Flight_Approval__c</fullName>
    <inlineHelpText>The approval status of a student&#39;s divergent flight arrival or departure.</inlineHelpText>
    <label>Early / Late Flight Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>