unpackaged/main/default/objects/Flight__c/fields/Email_Missing_Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Missing_Enrollment_Id__c</fullName>
    <label>Email Missing Enrollment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>