unpackaged/main/default/objects/Flight__c/fields/First_Leg_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>First_Leg_Airport_Code__c</fullName>
    <label>First Leg Airport Code</label>
    <type>TextArea</type>
</CustomField>