unpackaged/main/default/objects/Flight__c/fields/First_Leg_Arrival_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Leg_Arrival_Date_Time__c</fullName>
    <label>First Leg Arrival Date/Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>