unpackaged/main/default/objects/Flight__c/fields/First_Leg_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>First_Leg_Flight_Number__c</fullName>
    <label>First Leg Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>