unpackaged/main/default/objects/Flight__c/fields/Flight_Number_First_Leg__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number_First_Leg__c</fullName>
    <label>Flight Number - First Leg</label>
    <length>100</length>
    <type>Text</type>
</CustomField>