unpackaged/main/default/objects/Flight__c/fields/Full_Name_Missing_Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Missing_Enrollment_Id__c</fullName>
    <label>Full Name Missing Enrollment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>