unpackaged/main/default/objects/Flight__c/fields/Return_Arrival_Airport_Code_First_Leg__c.field-meta.xml
<CustomField>
    <fullName>Return_Arrival_Airport_Code_First_Leg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Arrival Airport Code - First Leg</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights (Return Arrival Airport Code - First Leg)</relationshipLabel>
    <relationshipName>Flights7</relationshipName>
    <type>Lookup</type>
</CustomField>