unpackaged/main/default/objects/Flight__c/fields/Return_Arrival_Time_First_Leg__c.field-meta.xml
<CustomField>
    <fullName>Return_Arrival_Time_First_Leg__c</fullName>
    <label>Return Arrival Time - First Leg</label>
    <type>DateTime</type>
</CustomField>