unpackaged/main/default/objects/Flight__c/fields/Return_Arrival_Time_Second_Leg_UTC__c.field-meta.xml
<CustomField>
    <fullName>Return_Arrival_Time_Second_Leg_UTC__c</fullName>
    <label>Return Arrival Time - Second Leg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>