unpackaged/main/default/objects/Flight__c/fields/Return_First_Leg_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Return_First_Leg_Flight_Number__c</fullName>
    <label>Return First Leg Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>