unpackaged/main/default/objects/Flight__c/fields/Return_Flight_Airport_Code_Third_Leg__c.field-meta.xml
<CustomField>
    <fullName>Return_Flight_Airport_Code_Third_Leg__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Flight Airport Code - Third Leg</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Flights (Return Flight Airport Code - Third Leg)</relationshipLabel>
    <relationshipName>Flights9</relationshipName>
    <type>Lookup</type>
</CustomField>