unpackaged/main/default/objects/Flight__c/fields/Return_Flight_Number_Second_Leg__c.field-meta.xml
<CustomField>
    <fullName>Return_Flight_Number_Second_Leg__c</fullName>
    <label>Return Flight Number - Second Leg</label>
    <length>100</length>
    <type>Text</type>
</CustomField>