unpackaged/main/default/objects/Flight__c/fields/Return_Second_Leg_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Return_Second_Leg_Flight_Number__c</fullName>
    <label>Return Second Leg Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>