unpackaged/main/default/objects/Flight__c/fields/Return_Third_Leg_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Return_Third_Leg_Airport_Code__c</fullName>
    <label>Return Third Leg Airport Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>