unpackaged/main/default/objects/Flight__c/fields/Return_Third_Leg_Arrival_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Return_Third_Leg_Arrival_Date_Time__c</fullName>
    <label>Return Third Leg Arrival Date/Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>