unpackaged/main/default/objects/Flight__c/fields/Return_Third_Leg_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Return_Third_Leg_Flight_Number__c</fullName>
    <label>Return Third Leg Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>