unpackaged/main/default/objects/Flight__c/fields/Second_Leg_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Second_Leg_Airport_Code__c</fullName>
    <label>Second Leg Airport Code</label>
    <type>TextArea</type>
</CustomField>