unpackaged/main/default/objects/Flight__c/fields/Second_Leg_Arrival_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Second_Leg_Arrival_Date_Time__c</fullName>
    <label>Second Leg Arrival Date/Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>