unpackaged/main/default/objects/Flight__c/fields/Second_Leg_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Second_Leg_Flight_Number__c</fullName>
    <label>Second Leg Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>