unpackaged/main/default/objects/Flight__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <formula>Enrollment_Record__r.Student_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Name</label>
    <type>Text</type>
</CustomField>