unpackaged/main/default/objects/Flight__c/fields/Third_Leg_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Third_Leg_Airport_Code__c</fullName>
    <label>Third Leg Airport Code</label>
    <type>TextArea</type>
</CustomField>