unpackaged/main/default/objects/Flight__c/fields/Third_Leg_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Third_Leg_Flight_Number__c</fullName>
    <label>Third Leg Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>