unpackaged/main/default/objects/Flight__c/fields/Train_Arrival_Station__c.field-meta.xml
<CustomField>
    <fullName>Train_Arrival_Station__c</fullName>
    <label>Train Arrival Station</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Santa Justa Train Station</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>