unpackaged/main/default/objects/Flight__c/fields/Train_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Train_Arrival_Time__c</fullName>
    <label>Train Arrival Time</label>
    <type>DateTime</type>
</CustomField>