unpackaged/main/default/objects/Flight__c/recordTypes/Flights.recordType-meta.xml
<RecordType>
    <fullName>Flights</fullName>
    <active>true</active>
    <description>Current RT for Flights</description>
    <label>Flights</label>
</RecordType>