unpackaged/main/default/objects/Flight__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Converted from Standard &gt; Legacy since all new Flight Forms will be on a new page layout</description>
    <label>Legacy</label>
</RecordType>