unpackaged/main/default/objects/Flight__c/listViews/All_Flights.listView-meta.xml
<ListView>
    <fullName>All_Flights</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>First_Leg_Arrival_Date_Time__c</columns>
    <columns>Arrival_Time_First_Leg__c</columns>
    <columns>Arrival_Time_First_Leg_UTC_Conversion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Flights</label>
</ListView>