unpackaged/main/default/objects/Flight__c/listViews/All_LEGACY_Flights.listView-meta.xml
<ListView>
    <fullName>All_LEGACY_Flights</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Flight__c.Standard</value>
    </filters>
    <label>All LEGACY Flights</label>
</ListView>